2010-11-01 Borut Razem <borut.razem AT siol.net>

	* Small Device C Compiler 3.0.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.0.1

2010-10-23 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic/libsdcc/fs2ulong.c, device/lib/pic/libsdcc/fslt.c,
	  device/lib/pic/libsdcc/fseq.c, device/lib/pic/libsdcc/ulong2fs.c,
	  device/lib/pic/libsdcc/fsgt.c, device/lib/pic/libsdcc/fsdiv.c,
	  device/lib/pic/libsdcc/fsneq.c, device/lib/pic/libsdcc/fsadd.c,
	  device/lib/pic/libsdcc/fssub.c, device/lib/pic/libsdcc/fsmul.c,
	  device/lib/ds400/ds400rom.c:
	  sdcc library license changed to GPL+LE
	* support/scripts/sdcc.nsi:
	  no need to copy readline5.dll

2010-10-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: documented --model-huge and other small updates

2010-10-17 Borut Razem <borut.razem AT siol.net>

	* support/cpp/sdcpp-opts.c:
	  fixed bug #3088672: -M (& -MM) not suppressing warnings
	* doc/sdccman.lyx: small cosmetic changes

2010-10-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/C8051F920.h: patch 3088689, thanks Steven Borley

2010-10-16 Raphael Neider <rneider AT web.de>

	* device/lib/Makefile.in, device/non-free/lib/Makefile.in:
	  fix parallel make on cygwin by preventing multiple rules
	  from generating the same library files

2010-10-14 Raphael Neider <rneider AT web.de>

	* device/lib/pic/configure.in,
	  device/lib/pic16/configure.ac,
	  device/non-free/lib/pic/configure.in,
	  device/non-free/lib/pic16/configure.ac: abort configure if gputils
	  are unavailable while the pic14 or pic16 port is enabled
	* device/lib/pic/configure,
	  device/lib/pic16/configure,
	  device/non-free/lib/pic/configure,
	  device/non-free/lib/pic16/configure: regenerated
	* device/non-free/lib/Makefile.in: avoid trying to install from
	  non-existing BUILDDIR (if both pic ports are disabled)
	* doc/sdccman.lyx: fix supported pic14 devices (16hv616 and 16hv785)